

=item * 

Changed SiteServer to forbid any request which doesn't match a
publish or preview URL.  SiteServer trans handler now sets up 
C< $ENV{DOCUMENT_ROOT} > correctly which is needed in a CGI environment.
[Jesse Erlbaum]


=item * 

Krang::lib set to also ignore ".svn" directories.  [Jesse Erlbaum]

=item *

Stricter enforcement of asset permissions. [Michael Peters]

=back



=head2 2.008 - Dec 20th, 2006

=over

=item *

Fixed a long standing publishing bug.  Shuffling stories around could
cause the wrong files to be deleted when publishing.  [Sam]

=item *

Added several new configuration options which allow Krang instances to
run on separate IPs and have different SSL configurations.  [Sam]

=item *

Added a new option for addons, DataSetClasses.  This allows addons to
extend Krang::DataSet and include new objects in KDS files.  [Sam]

=item *

Implemented a system of univerally-unique identfiers (UUIDs) for Krang
objects with keys that may change (ex. stories may change their URL).
This allows updates between machines to propogate these changes
correctly when objects are moved with krang_export and krang_import.
[Sam]

=item *

Added C<PasswordChangeTime> and C<PasswordChangeCount> directives
to allow the forcing of users to change their password every C<PasswordChangeTime>
days and not permit users to use old passwords with C<PasswordChangeCount>
changes. [Michael Peters]

=item *

More uniform password validation. Now also easier to implement a custom
password policy as an addon. [Michael Peters]

=item * 

Added security feature of locking out users after several failed login
attempts. Configurable by the C<BadLoginCount>, C<BadLoginWait> and
C<BadLoginNotify> conf directives. [Michael Peters]

=item *

Fixed bug in Krang::AddOn which would cause multiple version upgrades
which include changes to class.conf to fail.  Specifically, the updated
class.conf (and other libraries) were not being reloaded until after
the upgrade ran.  [Jesse Erlbaum]
